--- a/MyApplicationSienke/app/src/main/res/layout/activity_meter_home_page.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_meter_home_page.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:id="@+id/root_relative"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="55dp"
         android:background="@color/theme_colors">
 
         <TextView
@@ -54,7 +54,9 @@
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:padding="10dp"
+        android:background="#F9F9F9"/>
 
     <TabWidget
         android:id="@android:id/tabs"
