--- a/MyApplicationSienke/app/src/main/res/layout/activity_move_homepage.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_move_homepage.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:id="@+id/root_relative"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="55dp"
         android:background="@color/theme_colors">
 
         <TextView
@@ -38,17 +38,23 @@
         android:scaleType="fitXY"
         android:src="@mipmap/banner2" />
 
-    <GridView
-        android:id="@+id/gridview"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:numColumns="3"
-        android:horizontalSpacing="10dp"
-        android:verticalSpacing="10dp"
-        android:background="@android:color/white"
-        android:listSelector="#00000000"
-        android:scrollbarThumbVertical="@color/text_blue"
-        android:scrollbarStyle="insideInset"
-        android:scrollbarSize="2dp"/>
+        android:layout_height="match_parent"
+        android:padding="20dp"
+        android:background="@mipmap/home_page_bg"
+        android:orientation="vertical">
+        <GridView
+            android:id="@+id/gridview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:numColumns="3"
+            android:verticalSpacing="20dp"
+            android:background="@color/white_transparent"
+            android:listSelector="#00000000"
+            android:scrollbarThumbVertical="@color/text_blue"
+            android:scrollbarStyle="insideInset"
+            android:scrollbarSize="2dp"/>
+    </LinearLayout>
 
 </LinearLayout>
