--- a/MyApplicationSienke/app/src/main/res/layout/activity_scan_code.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_scan_code.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:foreground="?android:attr/selectableItemBackground"
-        app:cardBackgroundColor="@android:color/white"
+        app:cardBackgroundColor="@color/theme_colors"
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp"
         app:contentPadding="8dp"
@@ -26,9 +26,9 @@
             android:layout_height="25dp"
             android:text="扫一扫"
             android:gravity="center"
-            android:paddingLeft="25dp"
-            android:paddingRight="25dp"
-            android:textColor="@color/theme_colors"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
     </android.support.v7.widget.CardView>
 
