--- a/MyApplicationSienke/app/src/main/res/layout/fragment_data_transfer.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/fragment_data_transfer.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/root_linearlayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/white"
-    android:orientation="vertical">
+              xmlns:tools="http://schemas.android.com/tools"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:id="@+id/root_linearlayout"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@android:color/white"
+              android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,19 +15,31 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/upload"
+        <android.support.v7.widget.CardView
+            android:id="@+id/book_cardview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/security_choose_item_selector"
-            android:drawablePadding="8dp"
-            android:drawableTop="@mipmap/upload"
-            android:gravity="center_horizontal"
-            android:padding="30dp"
-            android:src="@mipmap/upload"
-            android:text="上传"
-            android:textColor="@color/text_blue"
-            android:textSize="20sp" />
+            android:layout_margin="10dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="@android:color/white"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:contentPadding="30dp"
+            tools:targetApi="lollipop">
+
+            <TextView
+                android:id="@+id/upload"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/security_choose_item_selector"
+                android:drawablePadding="8dp"
+                android:drawableTop="@mipmap/upload"
+                android:gravity="center_horizontal"
+                android:src="@mipmap/upload"
+                android:text="上传"
+                android:textColor="@drawable/radiogroup_text_selector"
+                android:textSize="14sp" />
+        </android.support.v7.widget.CardView>
     </LinearLayout>
 
     <LinearLayout
@@ -34,20 +48,29 @@
         android:layout_weight="1"
         android:gravity="center"
         android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/download"
+        <android.support.v7.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/security_choose_item_selector"
-            android:drawablePadding="8dp"
-            android:drawableTop="@mipmap/download"
-            android:gravity="center_horizontal"
-            android:padding="30dp"
-            android:text="下载"
-            android:textColor="@color/text_blue"
-            android:textSize="20sp" />
-    </LinearLayout>
+            android:layout_margin="10dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="@android:color/white"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:contentPadding="30dp"
+            tools:targetApi="lollipop">
 
+            <TextView
+                android:id="@+id/download"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/security_choose_item_selector"
+                android:drawablePadding="8dp"
+                android:drawableTop="@mipmap/download"
+                android:gravity="center_horizontal"
+                android:text="下载"
+                android:textColor="@drawable/radiogroup_text_selector"
+                android:textSize="14sp" />
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
 
 </LinearLayout>
