--- a/MyApplicationSienke/app/src/main/res/layout/gridview_homepage_item.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/gridview_homepage_item.xml
@@ -2,48 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              xmlns:tools="http://schemas.android.com/tools"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:gravity="center"
               android:orientation="vertical"
-              android:background="@android:color/white">
+              android:background="@color/white_transparent">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/book_cardview"
+    <ImageView
+        android:id="@+id/image_zsbg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardBackgroundColor="@android:color/white"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="5dp"
-        tools:targetApi="lollipop"
-        app:contentPadding="15dp">
+        android:scaleType="centerCrop"
+        android:src="@mipmap/zsbg"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <ImageView
-                android:id="@+id/image_zsbg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:src="@mipmap/zsbg"/>
-
-            <TextView
-                android:id="@+id/image_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:paddingLeft="10dp"
-                android:paddingTop="10dp"
-                android:paddingRight="10dp"
-                android:text="掌上办公"
-                android:textColor="@color/theme_colors"
-                android:textSize="14sp"
-                android:textStyle="italic"/>
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+    <TextView
+        android:id="@+id/image_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp"
+        android:text="掌上办公"
+        android:textColor="@drawable/radiogroup_text_selector"
+        android:textSize="14sp"/>
 
 </LinearLayout>
