--- a/MyApplicationSienke/app/src/main/res/layout/meter_user_list_item.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/meter_user_list_item.xml
@@ -13,8 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        app:cardBackgroundColor="@color/gray_thin"
-        app:cardCornerRadius="10dp"
+        app:cardBackgroundColor="@android:color/white"
+        app:cardCornerRadius="5dp"
         app:cardElevation="5dp"
         app:contentPadding="8dp">
         <LinearLayout
@@ -73,17 +73,9 @@
                         android:textSize="14sp" />
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="姓名:"
-                        android:textColor="@color/text_black"
-                        android:textSize="16sp" />
-
-                    <TextView
                         android:id="@+id/user_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
                         android:text="汪洋"
                         android:textColor="@color/text_black"
                         android:textSize="16sp" />
