--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_fbgg.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_fbgg.xml
@@ -138,6 +138,7 @@
         android:id="@+id/send"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:background="@color/text_font_color_white">
 
         <TextView
