--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_flow_leave.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_flow_leave.xml
@@ -24,212 +24,225 @@
             android:layout_centerInParent="true"
             android:text="请假流程"
             android:textColor="@android:color/white"
-            android:textSize="22sp" />id
+            android:textSize="22sp" />
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/id"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@color/text_font_color_white"
-        android:padding="10dp"
-        android:text="请假申请单"
-        android:textColor="@color/text_black"
-        android:textSize="16sp" />
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/text_font_color_white"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawablePadding="15dp"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:text="申请人："
-                    android:textColor="@color/text_black"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/name"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:padding="8dp"
-                    android:text="郑杰"
-                    android:textColor="@color/text_black" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/text_font_color_white"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawablePadding="15dp"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:text="部    门："
-                    android:textColor="@color/text_black"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/section"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:padding="8dp"
-                    android:text=""
-                    android:textColor="@color/text_black" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/text_font_color_white"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawablePadding="15dp"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:text="日    期："
-                    android:textColor="@color/text_black"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/data"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:padding="8dp"
-                    android:text="郑杰"
-                    android:textColor="@color/text_black" />
-
-            </LinearLayout>
-
             <TextView
+                android:id="@+id/id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawablePadding="15dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/text_font_color_white"
                 android:padding="10dp"
-                android:text="请假原因："
-                android:textColor="@color/text_black"
-                android:textSize="16sp" />
-
-            <EditText
-                android:id="@+id/content"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_margin="10dp"
-                android:background="@drawable/normal_button_bg_selector"
-                android:gravity="left"
-                android:hint="请填写请假原因"
-                android:padding="11dp"
-                android:textSize="12sp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawablePadding="15dp"
-                android:padding="10dp"
-                android:text="请假时间："
+                android:text="请假申请单"
                 android:textColor="@color/text_black"
                 android:textSize="16sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@color/text_font_color_white"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/text_font_color_white"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="15dp"
+                        android:gravity="center"
+                        android:padding="10dp"
+                        android:text="申请人："
+                        android:textColor="@color/text_black"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/name"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="right"
+                        android:padding="8dp"
+                        android:text="郑杰"
+                        android:textColor="@color/text_black" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/text_font_color_white"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="15dp"
+                        android:gravity="center"
+                        android:padding="10dp"
+                        android:text="部    门："
+                        android:textColor="@color/text_black"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/section"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="right"
+                        android:padding="8dp"
+                        android:text=""
+                        android:textColor="@color/text_black" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/text_font_color_white"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="15dp"
+                        android:gravity="center"
+                        android:padding="10dp"
+                        android:text="日    期："
+                        android:textColor="@color/text_black"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/data"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="right"
+                        android:padding="8dp"
+                        android:text="郑杰"
+                        android:textColor="@color/text_black" />
+
+                </LinearLayout>
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="15dp"
-                    android:text="开始"
+                    android:drawablePadding="15dp"
+                    android:padding="10dp"
+                    android:text="请假原因："
                     android:textColor="@color/text_black"
                     android:textSize="16sp" />
 
-                <TextView
-                    android:id="@+id/start_date"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="1"
+                <EditText
+                    android:id="@+id/content"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_margin="10dp"
                     android:background="@drawable/normal_button_bg_selector"
-                    android:drawableRight="@mipmap/down"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:text="2017-3-13"
-                    android:textColor="@color/text_black"
-                    android:textSize="14sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@color/text_font_color_white"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
+                    android:gravity="left"
+                    android:hint="请填写请假原因"
+                    android:padding="11dp"
+                    android:textSize="12sp" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="15dp"
-                    android:text="结束"
+                    android:drawablePadding="15dp"
+                    android:padding="10dp"
+                    android:text="请假时间："
                     android:textColor="@color/text_black"
                     android:textSize="16sp" />
 
-                <TextView
-                    android:id="@+id/end_date"
-                    android:layout_width="0dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/normal_button_bg_selector"
-                    android:drawableRight="@mipmap/down"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:text="2017-3-13"
-                    android:textColor="@color/text_black"
-                    android:textSize="14sp" />
+                    android:layout_marginTop="5dp"
+                    android:background="@color/text_font_color_white"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="15dp"
+                        android:text="开始"
+                        android:textColor="@color/text_black"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/start_date"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/normal_button_bg_selector"
+                        android:drawableRight="@mipmap/down"
+                        android:gravity="center"
+                        android:padding="10dp"
+                        android:text="2017-3-13"
+                        android:textColor="@color/text_black"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:background="@color/text_font_color_white"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="15dp"
+                        android:text="结束"
+                        android:textColor="@color/text_black"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/end_date"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/normal_button_bg_selector"
+                        android:drawableRight="@mipmap/down"
+                        android:gravity="center"
+                        android:padding="10dp"
+                        android:text="2017-3-13"
+                        android:textColor="@color/text_black"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
+    </ScrollView>
 
     <TextView
         android:id="@+id/save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:background="@color/text_font_color_white"
         android:gravity="center"
         android:padding="10dp"
