--- a/MyApplicationSienke/app/src/main/res/layout/fragment_network.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/fragment_network.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -17,29 +19,63 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
+        <android.support.v7.widget.CardView
             android:id="@+id/email"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
             android:layout_weight="1"
-            android:drawablePadding="10dp"
-            android:drawableTop="@mipmap/business_email"
-            android:gravity="center"
-            android:padding="15dp"
-            android:text="邮件"
-            android:textColor="@color/text_black" />
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="@android:color/white"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:contentPadding="8dp"
+            tools:targetApi="lollipop">
 
-        <TextView
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableTop="@mipmap/business_email"
+                    android:gravity="center"
+                    android:text="邮件"
+                    android:textColor="@color/text_black" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
             android:id="@+id/phone_book"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
             android:layout_weight="1"
-            android:drawablePadding="10dp"
-            android:drawableTop="@mipmap/business_phone_book"
-            android:gravity="center"
-            android:padding="15dp"
-            android:text="通讯录"
-            android:textColor="@color/text_black" />
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="@android:color/white"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:contentPadding="8dp"
+            tools:targetApi="lollipop">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableTop="@mipmap/business_phone_book"
+                    android:gravity="center"
+                    android:text="通讯录"
+                    android:textColor="@color/text_black" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
 
         <TextView
             android:layout_width="0dp"
