--- a/MyApplicationSienke/app/src/main/res/layout/fragment_person_work.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/fragment_person_work.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -14,55 +16,105 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/gray_thin">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <TextView
+                <android.support.v7.widget.CardView
                     android:id="@+id/schedule"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
                     android:layout_weight="1"
-                    android:drawablePadding="10dp"
-                    android:drawableTop="@mipmap/rcap"
-                    android:gravity="center"
-                    android:padding="15dp"
-                    android:text="日程安排"
-                    android:textColor="@color/text_black" />
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:cardBackgroundColor="@android:color/white"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="5dp"
+                    app:contentPadding="8dp"
+                    tools:targetApi="lollipop">
 
-                <TextView
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:drawableTop="@mipmap/rcap"
+                            android:gravity="center"
+                            android:text="日程安排"
+                            android:textColor="@color/text_black" />
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
                     android:id="@+id/work_report"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
                     android:layout_weight="1"
-                    android:drawablePadding="10dp"
-                    android:drawableTop="@mipmap/gzhb"
-                    android:gravity="center"
-                    android:padding="15dp"
-                    android:text="工作汇报"
-                    android:textColor="@color/text_black" />
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:cardBackgroundColor="@android:color/white"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="5dp"
+                    app:contentPadding="8dp"
+                    tools:targetApi="lollipop">
 
-                <TextView
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:drawableTop="@mipmap/gzhb"
+                            android:gravity="center"
+                            android:text="工作汇报"
+                            android:textColor="@color/text_black" />
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
                     android:id="@+id/GPS"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
                     android:layout_weight="1"
-                    android:drawablePadding="10dp"
-                    android:drawableTop="@mipmap/dw"
-                    android:gravity="center"
-                    android:padding="15dp"
-                    android:text="移动考勤"
-                    android:textColor="@color/text_black" />
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:cardBackgroundColor="@android:color/white"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="5dp"
+                    app:contentPadding="8dp"
+                    tools:targetApi="lollipop">
 
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:drawableTop="@mipmap/dw"
+                            android:gravity="center"
+                            android:text="移动考勤"
+                            android:textColor="@color/text_black" />
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
             </LinearLayout>
 
             <LinearLayout
@@ -70,41 +122,92 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <TextView
+                <android.support.v7.widget.CardView
                     android:id="@+id/examine"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
                     android:layout_weight="1"
-                    android:drawablePadding="10dp"
-                    android:drawableTop="@mipmap/lcsp"
-                    android:gravity="center"
-                    android:padding="15dp"
-                    android:text="流程审批"
-                    android:textColor="@color/text_black" />
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:cardBackgroundColor="@android:color/white"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="5dp"
+                    app:contentPadding="8dp"
+                    tools:targetApi="lollipop">
 
-                <TextView
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:drawableTop="@mipmap/lcsp"
+                            android:gravity="center"
+                            android:text="流程审批"
+                            android:textColor="@color/text_black" />
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
                     android:id="@+id/person_set"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
                     android:layout_weight="1"
-                    android:drawablePadding="10dp"
-                    android:drawableTop="@mipmap/grsz"
-                    android:gravity="center"
-                    android:padding="15dp"
-                    android:text="个人设置"
-                    android:textColor="@color/text_black" />
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:cardBackgroundColor="@android:color/white"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="5dp"
+                    app:contentPadding="8dp"
+                    tools:targetApi="lollipop">
 
-                <TextView
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:drawableTop="@mipmap/grsz"
+                            android:gravity="center"
+                            android:text="个人设置"
+                            android:textColor="@color/text_black" />
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
                     android:layout_weight="1"
-                    android:drawablePadding="10dp"
-                    android:drawableTop="@mipmap/grsz"
-                    android:gravity="center"
-                    android:padding="15dp"
-                    android:text="个人设置"
-                    android:textColor="@color/text_black"
-                    android:visibility="invisible" />
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:cardBackgroundColor="@color/gray_thin"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="0dp"
+                    app:contentPadding="8dp"
+                    tools:targetApi="lollipop">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:drawableTop="@mipmap/grsz"
+                            android:gravity="center"
+                            android:text="个人设置"
+                            android:textColor="@color/text_black"
+                            android:visibility="invisible" />
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
             </LinearLayout>
 
         </LinearLayout>
