--- a/MyApplicationSienke/app/src/main/res/layout/fragment_public_message.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/fragment_public_message.xml
@@ -1,53 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <ImageView
         android:id="@+id/pic_bg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@mipmap/business_bg"
         android:layout_gravity="center"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitXY"
+        android:src="@mipmap/business_bg" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <TextView
+
+        <android.support.v7.widget.CardView
             android:id="@+id/news"
             android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="通知公告"
-            android:textColor="@color/text_black"
-            android:drawableTop="@mipmap/business_news"
-            android:gravity="center"
-            android:drawablePadding="10dp"
-            android:padding="15dp"/>
-        <TextView
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="@android:color/white"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:contentPadding="8dp"
+            tools:targetApi="lollipop">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableTop="@mipmap/business_news"
+                    android:gravity="center"
+                    android:text="通知公告"
+                    android:textColor="@color/text_black" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
             android:id="@+id/message"
             android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="发布公告"
-            android:textColor="@color/text_black"
-            android:drawableTop="@mipmap/fbgg"
-            android:gravity="center"
-            android:drawablePadding="10dp"
-            android:padding="15dp"/>
-        <TextView
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="@android:color/white"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:contentPadding="8dp"
+            tools:targetApi="lollipop">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableTop="@mipmap/fbgg"
+                    android:gravity="center"
+                    android:text="发布公告"
+                    android:textColor="@color/text_black" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
             android:id="@+id/community"
             android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="公司社区"
-            android:textColor="@color/text_black"
-            android:drawableTop="@mipmap/gssq"
-            android:gravity="center"
-            android:drawablePadding="10dp"
-            android:padding="15dp"/>
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="@android:color/white"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:contentPadding="8dp"
+            tools:targetApi="lollipop">
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableTop="@mipmap/gssq"
+                    android:gravity="center"
+                    android:text="公司社区"
+                    android:textColor="@color/text_black" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
     </LinearLayout>
 
 </LinearLayout>
