--- a/MyApplicationSienke/app/src/main/res/layout/popupwidow_business_community.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/popupwidow_business_community.xml
@@ -1,46 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:id="@+id/root_linearlayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical"
-    android:padding="3dp">
+    android:background="@color/white_transparent">
 
-    <RadioGroup
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
-
-        <RadioButton
+    <LinearLayout
+        android:layout_width="110dp"
+        android:layout_height="70dp"
+        android:orientation="vertical"
+        android:background="@mipmap/window_bg"
+        android:paddingTop="4dp">
+        <TextView
             android:id="@+id/message"
-            android:layout_width="120dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/security_popupwindow"
-            android:button="@null"
             android:drawableLeft="@mipmap/community_message"
-            android:drawablePadding="10dp"
+            android:drawableStart="@mipmap/community_message"
+            android:drawablePadding="8dp"
+            android:background="@drawable/meter_settings_layout_selector"
+            android:gravity="center"
             android:padding="8dp"
             android:text="栏目信息"
-            android:textColor="@drawable/security_popupwindow_text"
-            android:textSize="14sp" />
-
+            android:textColor="@color/text_black"
+            android:textSize="12sp"/>
         <View
-            android:layout_width="120dp"
-            android:layout_height="1dp"
-            android:background="@color/gray" />
+            android:layout_width="110dp"
+            android:layout_height="0.5dp"
+            android:background="@color/gray_thin" />
 
-        <RadioButton
+        <TextView
             android:id="@+id/send"
-            android:layout_width="120dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/security_popupwindow"
-            android:button="@null"
             android:drawableLeft="@mipmap/send_message"
-            android:drawablePadding="10dp"
+            android:drawableStart="@mipmap/send_message"
+            android:drawablePadding="8dp"
+            android:background="@drawable/meter_settings_layout_selector"
+            android:gravity="center"
             android:padding="8dp"
             android:text="发布文章"
-            android:textColor="@drawable/security_popupwindow_text"
-            android:textSize="14sp" />
-    </RadioGroup>
+            android:textColor="@color/text_black"
+            android:textSize="12sp" />
+
+
+    </LinearLayout>
 
 </LinearLayout>
