--- a/MyApplicationSienke/app/src/main/res/layout/popupwindow_business_fbgg.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/popupwindow_business_fbgg.xml
@@ -1,42 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@color/gray_little_thin"
-    android:orientation="vertical">
+    android:id="@+id/root_linearlayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:background="@color/white_transparent">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="110dp"
+        android:layout_height="70dp"
+        android:orientation="vertical"
+        android:background="@mipmap/window_bg"
+        android:paddingTop="4dp">
+        <TextView
+            android:id="@+id/huiyi"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:drawablePadding="8dp"
+            android:background="@drawable/meter_settings_layout_selector"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="会议纪要"
+            android:textColor="@color/text_black"
+            android:textSize="16sp"/>
+        <View
+            android:layout_width="110dp"
+            android:layout_height="0.5dp"
+            android:background="@color/gray_thin" />
+
+        <TextView
+            android:id="@+id/tongzhi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawablePadding="8dp"
+            android:background="@drawable/meter_settings_layout_selector"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="通知公告"
+            android:textColor="@color/text_black"
+            android:textSize="16sp" />
 
 
-            <TextView
-                android:id="@+id/huiyi"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:background="@drawable/security_popupwindow"
-                android:text="会议纪要"
-                android:textColor="@color/text_black"
-                android:textSize="16sp" />
+    </LinearLayout>
 
-            <View
-                android:layout_width="wrap_content"
-                android:layout_height="1dp"
-                android:background="@color/gray_thin" />
-
-
-            <TextView
-                android:id="@+id/tongzhi"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:background="@drawable/security_popupwindow"
-                android:gravity="center"
-                android:text="通知公告"
-                android:textColor="@color/text_black"
-                android:textSize="16sp" />
-        </LinearLayout>
 </LinearLayout>
